Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,64 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Hiến kế cho nền hành chính phục vụ doanh nghiệp",
+    "content": "Bài viết đề xuất các giải pháp nhằm cải cách nền hành chính phục vụ doanh nghiệp và phát triển kinh tế tư nhân tại Việt Nam. Các chuyên gia khuyến nghị rằng chính sách cần hướng tới phục vụ doanh nghiệp thay vì quản lý chặt chẽ, cần giảm bớt thủ tục hành chính và ứng dụng công nghệ để tiết kiệm thời gian cho doanh nghiệp. Cần có sự thay đổi trong tư duy của công chức, coi doanh nghiệp là đối tác và khách hàng, đồng thời xây dựng cơ chế pháp lý bảo vệ quyền tài sản của doanh nghiệp.",
+    "link": "https://tuoitre.vn/hien-ke-cho-nen-hanh-chinh-phuc-vu-doanh-nghiep-20250319082944925.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Nền hành chính phục vụ doanh nghiệp cần thay đổi như thế nào?",
+    "answers": [
+      {
+        "text": "Cần giảm bớt thủ tục hành chính và ứng dụng công nghệ.",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường quản lý chặt chẽ doanh nghiệp.",
+        "correct": false
+      },
+      {
+        "text": "Giữ nguyên quy trình cũ.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường các yêu cầu giấy tờ cho doanh nghiệp.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tàu cá chìm, 4 ngư dân mất tích trên vùng biển Nghệ An",
+    "content": "Vào chiều ngày 18/3, một tàu cá mang số hiệu NA-80209-TS do thuyền trưởng Nguyễn Văn Cương điều khiển đã bị chìm trên vùng biển Nghệ An, khiến 4 ngư dân mất tích. Các thuyền viên gồm Trần Văn Hữu, Lê Tuấn Anh và Bùi Sỹ Nhất hiện vẫn chưa được tìm thấy. Sau khi nhận được thông tin, Đồn Biên phòng Quỳnh Thuận đã tổ chức tìm kiếm cứu nạn. Tàu cá này xuất phát từ Lạch Quèn vào ngày 17/3 và nguyên nhân vụ chìm vẫn chưa được làm rõ.",
+    "link": "https://vnexpress.net/tau-ca-chim-4-ngu-dan-mat-tich-tren-vung-bien-nghe-an-4863068.html",
+    "cat": "thoi-su",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Có bao nhiêu ngư dân mất tích trong vụ chìm tàu cá ở Nghệ An?",
+    "answers": [
+      {
+        "text": "4 ngư dân",
+        "correct": true
+      },
+      {
+        "text": "2 ngư dân",
+        "correct": false
+      },
+      {
+        "text": "3 ngư dân",
+        "correct": false
+      },
+      {
+        "text": "5 ngư dân",
+        "correct": false
+      },
+      {
+        "text": "1 ngư dân",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ecopark ra mắt không gian sống “Live - Work - Play” đầu tiên tại Nghệ An",
     "content": "Ecopark đã ra mắt không gian sống đầu tiên theo mô hình \"Live - Work - Play\" tại Nghệ An, nằm trong phân khu Central Bay của Eco Central Park. Mô hình này nhằm tạo ra một cộng đồng sống tích hợp, nơi cư dân có thể làm việc, giải trí và sinh hoạt trong bán kính gần nhau, giúp tiết kiệm thời gian di chuyển. Central Bay được thiết kế với nhiều tiện ích như khu thể thao, trường học và không gian xanh, hứa hẹn mang đến môi trường sống chất lượng cao cho cư dân.",
     "link": "https://tuoitre.vn/ecopark-ra-mat-khong-gian-song-live-work-play-dau-tien-tai-nghe-an-2025031908004273.htm",
@@ -444,33 +502,6 @@
     ]
   },
   {
-    "title": "Nhiều nhân giáp gây nổi bướu vùng cổ người phụ nữ",
-    "content": "Bài viết mô tả trường hợp của chị Hiền, 54 tuổi, ở TP.HCM, bị bướu giáp đa nhân sau khi phát hiện nổi u ở cổ. Qua chẩn đoán, bác sĩ xác định chị mắc ung thư biểu mô tuyến giáp thể nhú biến thể nang, tuy nhiên bệnh có tiên lượng tốt với tỷ lệ sống trên 5 năm hơn 98%. Sau ca phẫu thuật thành công, bệnh nhân hồi phục nhanh chóng và cần theo dõi định kỳ để phòng ngừa.",
-    "link": "https://vnexpress.net/nhieu-nhan-giap-gay-noi-buou-vung-co-nguoi-phu-nu-4862920.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Chị Hiền mắc bệnh gì sau khi nổi bướu ở cổ?",
-    "answers": [
-      {
-        "text": "Ung thư biểu mô tuyến giáp thể nhú biến thể nang",
-        "correct": true
-      },
-      {
-        "text": "Bệnh tim mạch",
-        "correct": false
-      },
-      {
-        "text": "Tiểu đường",
-        "correct": false
-      },
-      {
-        "text": "Bệnh phổi mãn tính",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bạch cầu tăng gấp 20 lần do ung thư máu nhưng không triệu chứng",
     "content": "Anh Mạnh, 32 tuổi, đã phát hiện bệnh ung thư máu khi đi khám sức khỏe vì thừa cân. Kết quả xét nghiệm cho thấy lượng bạch cầu của anh tăng gấp 20 lần so với mức bình thường, điều này là dấu hiệu cho thấy bệnh đang tiến triển mà không có triệu chứng rõ ràng. Các bác sĩ đã xác định anh mắc bạch cầu cấp loại M4, một dạng ung thư máu nguy hiểm, và đang tiến hành điều trị tích cực nhằm giảm số lượng bạch cầu và ngăn chặn sự phát triển của tế bào ác tính.",
     "link": "https://vnexpress.net/bach-cau-tang-gap-20-lan-do-ung-thu-mau-nhung-khong-trieu-chung-4862874.html",
@@ -493,6 +524,33 @@
       },
       {
         "text": "Vì anh Mạnh thường xuyên tập thể dục.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nhiều nhân giáp gây nổi bướu vùng cổ người phụ nữ",
+    "content": "Bài viết mô tả trường hợp của chị Hiền, 54 tuổi, ở TP.HCM, bị bướu giáp đa nhân sau khi phát hiện nổi u ở cổ. Qua chẩn đoán, bác sĩ xác định chị mắc ung thư biểu mô tuyến giáp thể nhú biến thể nang, tuy nhiên bệnh có tiên lượng tốt với tỷ lệ sống trên 5 năm hơn 98%. Sau ca phẫu thuật thành công, bệnh nhân hồi phục nhanh chóng và cần theo dõi định kỳ để phòng ngừa.",
+    "link": "https://vnexpress.net/nhieu-nhan-giap-gay-noi-buou-vung-co-nguoi-phu-nu-4862920.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chị Hiền mắc bệnh gì sau khi nổi bướu ở cổ?",
+    "answers": [
+      {
+        "text": "Ung thư biểu mô tuyến giáp thể nhú biến thể nang",
+        "correct": true
+      },
+      {
+        "text": "Bệnh tim mạch",
+        "correct": false
+      },
+      {
+        "text": "Tiểu đường",
+        "correct": false
+      },
+      {
+        "text": "Bệnh phổi mãn tính",
         "correct": false
       }
     ]
@@ -3412,33 +3470,6 @@
     ]
   },
   {
-    "title": "Bị ung thư đại tràng có nên kiêng rau củ?",
-    "content": "Bài viết đề cập đến việc người bệnh ung thư đại tràng có nên kiêng rau củ hay không. Theo các chuyên gia, người bệnh nên có chế độ ăn uống cân bằng và đa dạng, bao gồm cả rau củ để cung cấp vitamin và khoáng chất cần thiết. Tuy nhiên, trong một số trường hợp như tắc ruột hoặc tiêu chảy kéo dài, cần hạn chế thực phẩm chứa chất xơ và ưu tiên rau củ mềm, nấu chín kỹ để dễ tiêu hóa. Bác sĩ dinh dưỡng cũng có thể tư vấn chế độ ăn phù hợp theo tình trạng cụ thể của từng bệnh nhân.",
-    "link": "https://vnexpress.net/bi-ung-thu-dai-trang-co-nen-kieng-rau-cu-4862655.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người bệnh ung thư đại tràng có nên ăn rau củ không?",
-    "answers": [
-      {
-        "text": "Có, họ nên ăn rau củ để cung cấp dinh dưỡng cần thiết.",
-        "correct": true
-      },
-      {
-        "text": "Không, rau củ hoàn toàn không nên ăn.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên ăn rau củ khi không có triệu chứng gì.",
-        "correct": false
-      },
-      {
-        "text": "Có thể ăn rau củ nhưng chỉ nên ăn sống.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Điều trị u gan trên nền xơ gan thế nào?",
     "content": "Bài viết đề cập đến việc điều trị u gan ở người bệnh xơ gan, cụ thể là trường hợp người bệnh phát hiện nhiều khối u gan và viêm gan virus B. Phương pháp điều trị sẽ phụ thuộc vào kích thước và vị trí của khối u, có thể bao gồm nút mạch hoặc phẫu thuật. Đối với khối u nhỏ, có thể sử dụng đốt sóng cao tần hoặc tiêm cồn. Tuy nhiên, đối với người mắc viêm gan virus B, cần thận trọng vì có thể gây ra suy gan nhanh chóng.",
     "link": "https://vnexpress.net/dieu-tri-u-gan-tren-nen-xo-gan-the-nao-4862660.html",
@@ -3461,6 +3492,33 @@
       },
       {
         "text": "Dùng thuốc truyền thống để chữa trị",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bị ung thư đại tràng có nên kiêng rau củ?",
+    "content": "Bài viết đề cập đến việc người bệnh ung thư đại tràng có nên kiêng rau củ hay không. Theo các chuyên gia, người bệnh nên có chế độ ăn uống cân bằng và đa dạng, bao gồm cả rau củ để cung cấp vitamin và khoáng chất cần thiết. Tuy nhiên, trong một số trường hợp như tắc ruột hoặc tiêu chảy kéo dài, cần hạn chế thực phẩm chứa chất xơ và ưu tiên rau củ mềm, nấu chín kỹ để dễ tiêu hóa. Bác sĩ dinh dưỡng cũng có thể tư vấn chế độ ăn phù hợp theo tình trạng cụ thể của từng bệnh nhân.",
+    "link": "https://vnexpress.net/bi-ung-thu-dai-trang-co-nen-kieng-rau-cu-4862655.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người bệnh ung thư đại tràng có nên ăn rau củ không?",
+    "answers": [
+      {
+        "text": "Có, họ nên ăn rau củ để cung cấp dinh dưỡng cần thiết.",
+        "correct": true
+      },
+      {
+        "text": "Không, rau củ hoàn toàn không nên ăn.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên ăn rau củ khi không có triệu chứng gì.",
+        "correct": false
+      },
+      {
+        "text": "Có thể ăn rau củ nhưng chỉ nên ăn sống.",
         "correct": false
       }
     ]
@@ -4451,33 +4509,6 @@
       },
       {
         "text": "Bệnh viện Phụ sản Trung ương và Bệnh viện Việt Đức",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "TPHCM và một số tỉnh thành đề xuất thi tốt nghiệp THPT sớm 3 tuần",
-    "content": "Giám đốc Sở GD&ĐT TPHCM đã gửi văn bản đề xuất Bộ GD&ĐT tổ chức kỳ thi tốt nghiệp THPT sớm hơn 3 tuần, từ ngày 7 đến 10 tháng 6 năm 2025, nhằm đảm bảo quyền lợi cho học sinh và ổn định tâm lý cho phụ huynh. Tuy nhiên, một số tỉnh thành khác cũng có ý kiến rằng việc tổ chức kỳ thi sớm có thể gây khó khăn trong công tác tổ chức, đặc biệt là khi trùng thời gian với kỳ thi tuyển sinh lớp 10. Dù vậy, lãnh đạo Sở GD&ĐT TPHCM cho rằng việc thi sớm không ảnh hưởng đến thí sinh.",
-    "link": "https://dantri.com.vn/giao-duc/tphcm-va-mot-so-tinh-thanh-de-xuat-thi-tot-nghiep-thpt-som-3-tuan-20250318085324071.htm",
-    "cat": "giao-duc",
-    "positivity": 7,
-    "importance": 8,
-    "question": "TPHCM đề xuất thi tốt nghiệp THPT vào thời gian nào?",
-    "answers": [
-      {
-        "text": "Từ ngày 7 đến 10 tháng 6 năm 2025",
-        "correct": true
-      },
-      {
-        "text": "Từ ngày 26 đến 27 tháng 6 năm 2025",
-        "correct": false
-      },
-      {
-        "text": "Vào giữa tháng 7 năm 2025",
-        "correct": false
-      },
-      {
-        "text": "Cuối tháng 5 năm 2025",
         "correct": false
       }
     ]
