Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Thảo cầm viên Sài Gòn mở tour tham quan ban đêm, có ảnh hưởng động vật không?",
+    "content": "Thảo cầm viên Sài Gòn vừa công bố tổ chức tour tham quan ban đêm với chủ đề \"Khi màn đêm buông xuống\" nhằm mang đến trải nghiệm mới cho du khách về thế giới động vật hoạt động về đêm. Chương trình sẽ diễn ra vào tối thứ 7 hàng tuần, giới hạn số lượng khách tham gia để không gây ảnh hưởng đến thói quen của động vật. Giám đốc Xí nghiệp động vật cho biết các biện pháp đã được áp dụng để giảm thiểu ánh sáng và tiếng ồn nhằm bảo vệ động vật.",
+    "link": "https://tuoitre.vn/thao-cam-vien-sai-gon-mo-tour-tham-quan-ban-dem-co-anh-huong-dong-vat-khong-20250318213332406.htm",
+    "cat": "du-lich",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tour tham quan ban đêm ở Thảo cầm viên Sài Gòn có ảnh hưởng đến động vật không?",
+    "answers": [
+      {
+        "text": "Không, tour này không ảnh hưởng đến động vật.",
+        "correct": true
+      },
+      {
+        "text": "Có, tour này gây ra tiếng ồn lớn.",
+        "correct": false
+      },
+      {
+        "text": "Có, động vật sẽ bị hoảng sợ.",
+        "correct": false
+      },
+      {
+        "text": "Không, động vật sẽ không được quan sát gần.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hancorp ‘ôm’ ngàn tỉ vốn nhà nước, đầu tư vào hàng chục công ty thua lỗ",
     "content": "Tổng công ty Xây dựng Hà Nội (Hancorp) đang nắm giữ hơn 6.700 tỉ đồng vốn nhà nước và đã đầu tư vào 37 công ty, trong đó có 14 công ty thua lỗ. Kết quả thanh tra tài chính cho thấy nhiều khoản đầu tư của Hancorp không hiệu quả, với tổng số tiền đầu tư lên tới 992 tỉ đồng, nhưng lợi nhuận chỉ đạt khoảng 44,6 tỉ đồng trong năm 2023. Bộ Tài chính yêu cầu Hancorp rà soát và thu hồi vốn từ các khoản đầu tư thua lỗ để tránh thất thoát tài sản nhà nước.",
     "link": "https://tuoitre.vn/hancorp-om-ngan-ti-von-nha-nuoc-dau-tu-vao-hang-chuc-cong-ty-thua-lo-20250319095531046.htm",
@@ -206,6 +233,33 @@
     ]
   },
   {
+    "title": "Cô gái mắc chứng 'xương hóa đá'",
+    "content": "Cô gái 28 tuổi ở Bắc Giang mắc bệnh xương hóa đá, một bệnh lý di truyền hiếm gặp, gây đau khớp và khó khăn trong vận động. Cô đã trải qua phẫu thuật thay khớp háng nhân tạo do tình trạng bệnh nghiêm trọng, khiến xương trở nên cứng nhưng lại rất giòn. Ca phẫu thuật kéo dài 5 giờ đã thành công, giúp cô thoát khỏi cơn đau và có thể đi lại bình thường.",
+    "link": "https://vnexpress.net/co-gai-mac-chung-xuong-hoa-da-4863071.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bệnh xương hóa đá là gì và ảnh hưởng như thế nào đến bệnh nhân?",
+    "answers": [
+      {
+        "text": "Bệnh xương hóa đá là một rối loạn di truyền hiếm gặp, khiến xương trở nên cứng nhưng giòn.",
+        "correct": true
+      },
+      {
+        "text": "Bệnh xương hóa đá là một bệnh lây truyền qua đường hô hấp.",
+        "correct": false
+      },
+      {
+        "text": "Bệnh xương hóa đá là một bệnh về hệ tiêu hóa.",
+        "correct": false
+      },
+      {
+        "text": "Bệnh xương hóa đá là một chứng bệnh da liễu.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Trẻ rụng tóc do thiếu chất gì?",
     "content": "Trẻ bị rụng tóc có thể do thiếu hụt nhiều loại vitamin và khoáng chất thiết yếu như vitamin B, C, D, sắt, kẽm và selen trong chế độ dinh dưỡng hàng ngày. Thiếu dinh dưỡng có thể dẫn đến tình trạng tóc rụng nhiều hơn 100 sợi mỗi ngày, tóc yếu và dễ gãy. Bác sĩ Trần Thị Trà Phương đã nhấn mạnh tầm quan trọng của việc bổ sung các chất dinh dưỡng này để giúp tóc phát triển khỏe mạnh và ngăn ngừa rụng tóc ở trẻ em.",
     "link": "https://vnexpress.net/tre-rung-toc-do-thieu-chat-gi-4862999.html",
@@ -232,33 +286,6 @@
       },
       {
         "text": "Vitamin D và magie",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cô gái mắc chứng 'xương hóa đá'",
-    "content": "Cô gái 28 tuổi ở Bắc Giang mắc bệnh xương hóa đá, một bệnh lý di truyền hiếm gặp, gây đau khớp và khó khăn trong vận động. Cô đã trải qua phẫu thuật thay khớp háng nhân tạo do tình trạng bệnh nghiêm trọng, khiến xương trở nên cứng nhưng lại rất giòn. Ca phẫu thuật kéo dài 5 giờ đã thành công, giúp cô thoát khỏi cơn đau và có thể đi lại bình thường.",
-    "link": "https://vnexpress.net/co-gai-mac-chung-xuong-hoa-da-4863071.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bệnh xương hóa đá là gì và ảnh hưởng như thế nào đến bệnh nhân?",
-    "answers": [
-      {
-        "text": "Bệnh xương hóa đá là một rối loạn di truyền hiếm gặp, khiến xương trở nên cứng nhưng giòn.",
-        "correct": true
-      },
-      {
-        "text": "Bệnh xương hóa đá là một bệnh lây truyền qua đường hô hấp.",
-        "correct": false
-      },
-      {
-        "text": "Bệnh xương hóa đá là một bệnh về hệ tiêu hóa.",
-        "correct": false
-      },
-      {
-        "text": "Bệnh xương hóa đá là một chứng bệnh da liễu.",
         "correct": false
       }
     ]
@@ -2296,6 +2323,33 @@
     ]
   },
   {
+    "title": "4 điều cần biết về cơn ho",
+    "content": "Cơn ho là phản xạ tự nhiên giúp làm sạch đường hô hấp, thường kéo dài không quá hai tuần. Nếu ho dai dẳng hơn ba tuần, có thể do bệnh lý nghiêm trọng như nhiễm trùng, trào ngược dạ dày thực quản hoặc hen suyễn. Để phòng ngừa và giảm ho, việc uống đủ nước, thay đổi chế độ ăn uống và bỏ thuốc lá là rất quan trọng. Ngoài ra, rửa tay thường xuyên và tránh tiếp xúc với người bệnh cũng giúp giảm nguy cơ mắc bệnh.",
+    "link": "https://vnexpress.net/4-dieu-can-biet-ve-con-ho-4862670.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Những điều gì cần biết về cơn ho?",
+    "answers": [
+      {
+        "text": "Cơn ho thường kéo dài không quá hai tuần.",
+        "correct": true
+      },
+      {
+        "text": "Cơn ho luôn do virus gây ra.",
+        "correct": false
+      },
+      {
+        "text": "Ho không có tác dụng gì đối với sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Ho không liên quan đến việc uống nước.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "6 dưỡng chất cần thiết để duy trì sức khỏe",
     "content": "Bài viết trình bày về 6 dưỡng chất cần thiết để duy trì sức khỏe, bao gồm vitamin C, D, E, kẽm và các chất chống oxy hóa. Những dưỡng chất này đóng vai trò quan trọng trong việc tăng cường hệ miễn dịch, bảo vệ cơ thể khỏi các tác nhân gây bệnh, đặc biệt trong thời tiết thay đổi. Ngoài việc đảm bảo chế độ ăn uống đầy đủ các dưỡng chất này, lối sống lành mạnh với tập thể dục, kiểm soát căng thẳng và ngủ đủ giấc cũng rất cần thiết để duy trì sức khỏe.",
     "link": "https://vnexpress.net/6-duong-chat-can-thiet-de-duy-tri-suc-khoe-4862638.html",
@@ -2322,33 +2376,6 @@
       },
       {
         "text": "Protein động vật",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "\"Vovinam Dance\": Kết hợp võ thuật với vũ đạo, sân chơi mới cho giới trẻ",
-    "content": "Cuộc thi \"Vovinam Dance 2025\" vừa được tổ chức tại Hà Nội, do Đài PT-TH Hà Nội và Liên đoàn Vovinam Việt Nam phối hợp thực hiện. Đây là sự kiện kết hợp giữa võ thuật và nghệ thuật, nhằm tôn vinh kỷ niệm 50 năm Ngày Giải phóng miền Nam và 80 năm Quốc khánh Việt Nam. Cuộc thi không chỉ là sân chơi cho các võ sinh và vũ công mà còn là cơ hội để quảng bá văn hóa Vovinam ra thế giới, với tổng giải thưởng lên tới 550 triệu đồng.",
-    "link": "https://dantri.com.vn/giai-tri/vovinam-dance-ket-hop-vo-thuat-voi-vu-dao-san-choi-moi-cho-gioi-tre-20250318203314904.htm",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Cuộc thi Vovinam Dance 2025 được tổ chức nhằm mục đích gì?",
-    "answers": [
-      {
-        "text": "Tôn vinh văn hóa và nghệ thuật Vovinam",
-        "correct": true
-      },
-      {
-        "text": "Tạo ra một môn thể thao mới",
-        "correct": false
-      },
-      {
-        "text": "Giới thiệu võ thuật của các nước khác",
-        "correct": false
-      },
-      {
-        "text": "Tổ chức giải thưởng cho các môn thể thao khác",
         "correct": false
       }
     ]
@@ -2381,28 +2408,28 @@
     ]
   },
   {
-    "title": "4 điều cần biết về cơn ho",
-    "content": "Cơn ho là phản xạ tự nhiên giúp làm sạch đường hô hấp, thường kéo dài không quá hai tuần. Nếu ho dai dẳng hơn ba tuần, có thể do bệnh lý nghiêm trọng như nhiễm trùng, trào ngược dạ dày thực quản hoặc hen suyễn. Để phòng ngừa và giảm ho, việc uống đủ nước, thay đổi chế độ ăn uống và bỏ thuốc lá là rất quan trọng. Ngoài ra, rửa tay thường xuyên và tránh tiếp xúc với người bệnh cũng giúp giảm nguy cơ mắc bệnh.",
-    "link": "https://vnexpress.net/4-dieu-can-biet-ve-con-ho-4862670.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Những điều gì cần biết về cơn ho?",
+    "title": "\"Vovinam Dance\": Kết hợp võ thuật với vũ đạo, sân chơi mới cho giới trẻ",
+    "content": "Cuộc thi \"Vovinam Dance 2025\" vừa được tổ chức tại Hà Nội, do Đài PT-TH Hà Nội và Liên đoàn Vovinam Việt Nam phối hợp thực hiện. Đây là sự kiện kết hợp giữa võ thuật và nghệ thuật, nhằm tôn vinh kỷ niệm 50 năm Ngày Giải phóng miền Nam và 80 năm Quốc khánh Việt Nam. Cuộc thi không chỉ là sân chơi cho các võ sinh và vũ công mà còn là cơ hội để quảng bá văn hóa Vovinam ra thế giới, với tổng giải thưởng lên tới 550 triệu đồng.",
+    "link": "https://dantri.com.vn/giai-tri/vovinam-dance-ket-hop-vo-thuat-voi-vu-dao-san-choi-moi-cho-gioi-tre-20250318203314904.htm",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Cuộc thi Vovinam Dance 2025 được tổ chức nhằm mục đích gì?",
     "answers": [
       {
-        "text": "Cơn ho thường kéo dài không quá hai tuần.",
+        "text": "Tôn vinh văn hóa và nghệ thuật Vovinam",
         "correct": true
       },
       {
-        "text": "Cơn ho luôn do virus gây ra.",
+        "text": "Tạo ra một môn thể thao mới",
         "correct": false
       },
       {
-        "text": "Ho không có tác dụng gì đối với sức khỏe.",
+        "text": "Giới thiệu võ thuật của các nước khác",
         "correct": false
       },
       {
-        "text": "Ho không liên quan đến việc uống nước.",
+        "text": "Tổ chức giải thưởng cho các môn thể thao khác",
         "correct": false
       }
     ]
@@ -3069,37 +3096,6 @@
     ]
   },
   {
-    "title": "Dự kiến hoàn thành sáp nhập các tỉnh thành trước 30/8",
-    "content": "Bộ trưởng Nội vụ Phạm Thị Thanh Trà thông báo rằng việc sáp nhập các tỉnh thành trên toàn quốc sẽ hoàn tất trước ngày 30/8 và sẽ chính thức đi vào hoạt động từ tháng 9. Cùng với đó, việc sáp nhập các đơn vị hành chính cấp xã cũng sẽ hoàn thành trước 30/6. Bộ trưởng nhấn mạnh rằng quy trình này cần được thực hiện thận trọng, kỹ lưỡng và hiệu quả, đồng thời kêu gọi sự phối hợp chặt chẽ từ các bộ ngành để đảm bảo tiến độ thực hiện.",
-    "link": "https://vnexpress.net/du-kien-hoan-thanh-sap-nhap-cac-tinh-thanh-truoc-30-8-4862794.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Khi nào việc sáp nhập các tỉnh thành sẽ hoàn tất?",
-    "answers": [
-      {
-        "text": "Trước 30/8",
-        "correct": true
-      },
-      {
-        "text": "Trước 30/6",
-        "correct": false
-      },
-      {
-        "text": "Trước 1/7",
-        "correct": false
-      },
-      {
-        "text": "Vào tháng 9",
-        "correct": false
-      },
-      {
-        "text": "Vào cuối năm 2025",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bộ ngành giảm 22.000 biên chế sau tinh gọn",
     "content": "Các bộ, cơ quan ngang bộ và cơ quan thuộc Chính phủ đã giảm 22.323 biên chế, chiếm 20% tổng biên chế, trong quá trình tinh gọn bộ máy. Bộ trưởng Nội vụ, Phạm Thị Thanh Trà, cho biết đã giảm 13 tổng cục và tổ chức tương đương, cùng với nhiều cục, vụ và chi cục. Việc cải cách này được coi là một cuộc cách mạng trong hệ thống chính trị và nhằm nâng cao hiệu quả quản lý. Tuy nhiên, vẫn còn tồn tại tình trạng chồng chéo giữa các luật chuyên ngành cần được giải quyết.",
     "link": "https://vnexpress.net/bo-nganh-giam-22-000-bien-che-sau-tinh-gon-4862794.html",
@@ -3126,6 +3122,37 @@
       },
       {
         "text": "18.500 biên chế",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dự kiến hoàn thành sáp nhập các tỉnh thành trước 30/8",
+    "content": "Bộ trưởng Nội vụ Phạm Thị Thanh Trà thông báo rằng việc sáp nhập các tỉnh thành trên toàn quốc sẽ hoàn tất trước ngày 30/8 và sẽ chính thức đi vào hoạt động từ tháng 9. Cùng với đó, việc sáp nhập các đơn vị hành chính cấp xã cũng sẽ hoàn thành trước 30/6. Bộ trưởng nhấn mạnh rằng quy trình này cần được thực hiện thận trọng, kỹ lưỡng và hiệu quả, đồng thời kêu gọi sự phối hợp chặt chẽ từ các bộ ngành để đảm bảo tiến độ thực hiện.",
+    "link": "https://vnexpress.net/du-kien-hoan-thanh-sap-nhap-cac-tinh-thanh-truoc-30-8-4862794.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Khi nào việc sáp nhập các tỉnh thành sẽ hoàn tất?",
+    "answers": [
+      {
+        "text": "Trước 30/8",
+        "correct": true
+      },
+      {
+        "text": "Trước 30/6",
+        "correct": false
+      },
+      {
+        "text": "Trước 1/7",
+        "correct": false
+      },
+      {
+        "text": "Vào tháng 9",
+        "correct": false
+      },
+      {
+        "text": "Vào cuối năm 2025",
         "correct": false
       }
     ]
@@ -4560,37 +4587,6 @@
       },
       {
         "text": "Trạm sạc chỉ sử dụng ở nước ngoài",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "7 đặc điểm của người có tuổi thơ thiếu tình cảm",
-    "content": "Bài viết nêu ra 7 đặc điểm của những người có tuổi thơ thiếu tình cảm, ảnh hưởng đến tâm lý và hành vi khi trưởng thành. Những người này thường thiếu tự tin, dễ hung hăng khi nhận lời khuyên, luôn muốn được công nhận và khó từ chối lời mời. Họ cũng sợ thất bại, gặp khó khăn trong việc tin tưởng người khác và kiểm soát cảm xúc. Các đặc điểm này có thể dẫn đến nhiều vấn đề trong cuộc sống cá nhân và nghề nghiệp.",
-    "link": "https://vnexpress.net/7-dac-diem-cua-nguoi-co-tuoi-tho-thieu-tinh-cam-4862656.html",
-    "cat": "gia-dinh",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Những đặc điểm nào thường thấy ở người có tuổi thơ thiếu tình cảm?",
-    "answers": [
-      {
-        "text": "Thiếu tự tin, dễ hung hăng và sợ thất bại",
-        "correct": true
-      },
-      {
-        "text": "Luôn tự tin và thành công trong sự nghiệp",
-        "correct": false
-      },
-      {
-        "text": "Có khả năng kiểm soát cảm xúc tốt",
-        "correct": false
-      },
-      {
-        "text": "Thích giao tiếp và kết bạn nhiều hơn",
-        "correct": false
-      },
-      {
-        "text": "Thích sống một mình và không cần ai khác",
         "correct": false
       }
     ]
