Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -529,6 +529,33 @@
     ]
   },
   {
+    "title": "Bộ Quốc phòng lần đầu tuyển sinh chuyên ngành thiết bị bay không người lái",
+    "content": "Bộ Quốc phòng Việt Nam đã chính thức tuyển sinh chuyên ngành thiết bị bay không người lái (UAV) tại Trường Sĩ quan Không quân với 25 chỉ tiêu dành riêng cho nam sinh viên. Đây là năm đầu tiên trường được giao nhiệm vụ này, với tổng chỉ tiêu tuyển sinh là 165. Học viên sẽ được đào tạo trong 4 năm và sau khi tốt nghiệp sẽ làm việc tại các trung tâm về UAV trong lực lượng không quân.",
+    "link": "https://dantri.com.vn/giao-duc/bo-quoc-phong-lan-dau-tuyen-sinh-chuyen-nganh-thiet-bi-bay-khong-nguoi-lai-20250319104323804.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Bộ Quốc phòng tuyển sinh chuyên ngành nào năm 2025?",
+    "answers": [
+      {
+        "text": "Thiết bị bay không người lái (UAV)",
+        "correct": true
+      },
+      {
+        "text": "Kỹ thuật hàng không",
+        "correct": false
+      },
+      {
+        "text": "Quân sự tổng hợp",
+        "correct": false
+      },
+      {
+        "text": "Y học quân sự",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Được tăng 5 lần tiền bồi thường làm việc nhà sau ly hôn",
     "content": "Một tòa án tại Trung Quốc đã quyết định tăng gấp 5 lần số tiền bồi thường mà người chồng phải trả cho vợ sau khi ly hôn. Cô Hu, người đã dành 11 năm chăm sóc gia đình và làm việc nhà, yêu cầu 50.000 tệ nhưng cuối cùng nhận được 250.000 tệ để bù đắp cho những đóng góp của mình. Quyết định này khẳng định giá trị của công việc nhà và khuyến khích sự chia sẻ trách nhiệm trong gia đình, đồng thời gây ra nhiều tranh luận trên mạng xã hội về sự công bằng trong việc bồi thường giữa hai giới.",
     "link": "https://vnexpress.net/duoc-tang-5-lan-tien-boi-thuong-lam-viec-nha-sau-ly-hon-4863132.html",
@@ -582,6 +609,37 @@
       },
       {
         "text": "Không, động vật sẽ không được quan sát gần.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Băng giá xuất hiện ở Tà Xùa",
+    "content": "Băng giá đã xuất hiện lần đầu tiên trong tháng 3 ở đỉnh núi Tà Xùa, Yên Bái, phủ kín cây cối và thảm cỏ. Hiện tượng này xảy ra khi nhiệt độ ngoài trời giảm xuống 0 độ C, và đây là lần đầu tiên người dân chứng kiến băng xuất hiện vào tháng 3, trong khi thường băng chỉ xuất hiện vào tháng 12, tháng 1 hoặc tháng 2. Miền Bắc đang chịu ảnh hưởng của không khí lạnh, khiến nhiệt độ ở nhiều khu vực giảm mạnh.",
+    "link": "https://vnexpress.net/bang-gia-xuat-hien-o-ta-xua-4863121.html",
+    "cat": "thoi-su",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Băng giá ở Tà Xùa xuất hiện vào tháng mấy?",
+    "answers": [
+      {
+        "text": "Tháng 12",
+        "correct": false
+      },
+      {
+        "text": "Tháng 1",
+        "correct": false
+      },
+      {
+        "text": "Tháng 2",
+        "correct": false
+      },
+      {
+        "text": "Tháng 3",
+        "correct": true
+      },
+      {
+        "text": "Tháng 4",
         "correct": false
       }
     ]
@@ -1232,33 +1290,6 @@
     ]
   },
   {
-    "title": "Bạch cầu tăng gấp 20 lần do ung thư máu nhưng không triệu chứng",
-    "content": "Anh Mạnh, 32 tuổi, đã phát hiện bệnh ung thư máu khi đi khám sức khỏe vì thừa cân. Kết quả xét nghiệm cho thấy lượng bạch cầu của anh tăng gấp 20 lần so với mức bình thường, điều này là dấu hiệu cho thấy bệnh đang tiến triển mà không có triệu chứng rõ ràng. Các bác sĩ đã xác định anh mắc bạch cầu cấp loại M4, một dạng ung thư máu nguy hiểm, và đang tiến hành điều trị tích cực nhằm giảm số lượng bạch cầu và ngăn chặn sự phát triển của tế bào ác tính.",
-    "link": "https://vnexpress.net/bach-cau-tang-gap-20-lan-do-ung-thu-mau-nhung-khong-trieu-chung-4862874.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao bạch cầu của anh Mạnh lại tăng cao đến 20 lần?",
-    "answers": [
-      {
-        "text": "Vì anh Mạnh mắc ung thư máu.",
-        "correct": true
-      },
-      {
-        "text": "Vì anh Mạnh bị nhiễm virus.",
-        "correct": false
-      },
-      {
-        "text": "Vì anh Mạnh ăn uống không điều độ.",
-        "correct": false
-      },
-      {
-        "text": "Vì anh Mạnh thường xuyên tập thể dục.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hơn thập kỷ vô sinh do biến chứng đái tháo đường",
     "content": "Anh Tiến, 47 tuổi, đã phải sống với tình trạng vô sinh suốt 12 năm do biến chứng đái tháo đường, dẫn đến rối loạn cương và không có tinh trùng. Sau khi điều trị tại các cơ sở y tế ở Mỹ mà không thành công, anh đã trở về Việt Nam để thực hiện phương pháp thụ tinh ống nghiệm tại IVF Tâm Anh TP HCM. Dù gặp khó khăn trong việc xuất tinh, bác sĩ vẫn tìm ra tinh trùng trong nước tiểu và áp dụng phương pháp TESE để thu tinh trùng cho quá trình thụ tinh ống nghiệm, với kết quả khả quan.",
     "link": "https://vnexpress.net/hon-thap-ky-vo-sinh-do-bien-chung-dai-thao-duong-4862993.html",
@@ -1308,6 +1339,33 @@
       },
       {
         "text": "Bệnh phổi mãn tính",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bạch cầu tăng gấp 20 lần do ung thư máu nhưng không triệu chứng",
+    "content": "Anh Mạnh, 32 tuổi, đã phát hiện bệnh ung thư máu khi đi khám sức khỏe vì thừa cân. Kết quả xét nghiệm cho thấy lượng bạch cầu của anh tăng gấp 20 lần so với mức bình thường, điều này là dấu hiệu cho thấy bệnh đang tiến triển mà không có triệu chứng rõ ràng. Các bác sĩ đã xác định anh mắc bạch cầu cấp loại M4, một dạng ung thư máu nguy hiểm, và đang tiến hành điều trị tích cực nhằm giảm số lượng bạch cầu và ngăn chặn sự phát triển của tế bào ác tính.",
+    "link": "https://vnexpress.net/bach-cau-tang-gap-20-lan-do-ung-thu-mau-nhung-khong-trieu-chung-4862874.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao bạch cầu của anh Mạnh lại tăng cao đến 20 lần?",
+    "answers": [
+      {
+        "text": "Vì anh Mạnh mắc ung thư máu.",
+        "correct": true
+      },
+      {
+        "text": "Vì anh Mạnh bị nhiễm virus.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh Mạnh ăn uống không điều độ.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh Mạnh thường xuyên tập thể dục.",
         "correct": false
       }
     ]
@@ -1630,28 +1688,28 @@
     ]
   },
   {
-    "title": "NSƯT Bùi Như Lai \"Cha tôi, người ở lại\": Nhận mình lạnh lùng, sợ… nổi tiếng",
-    "content": "NSƯT Bùi Như Lai chia sẻ về cuộc sống và vai diễn trong bộ phim \"Cha tôi, người ở lại\", một tác phẩm Việt hóa từ phim Trung Quốc. Anh tự nhận mình là người lạnh lùng, không thích nổi tiếng và thường dành thời gian cho công việc quản lý tại Trường Đại học Sân khấu - Điện ảnh Hà Nội. Bùi Như Lai cũng nhấn mạnh tầm quan trọng của việc giữ gìn sự gần gũi với khán giả thông qua các vai diễn, mặc dù không muốn trở thành một ngôi sao giải trí. Anh đang hài lòng với cuộc sống bình dị cùng gia đình và công việc nghệ thuật.",
-    "link": "https://dantri.com.vn/giai-tri/nsut-bui-nhu-lai-cha-toi-nguoi-o-lai-nhan-minh-lanh-lung-so-noi-tieng-20250317220936197.htm",
-    "cat": "giai-tri",
-    "positivity": 7,
-    "importance": 6,
-    "question": "NSƯT Bùi Như Lai có những suy nghĩ gì về việc nổi tiếng?",
+    "title": "Bị PT ép tập gym quá sức",
+    "content": "Bài viết kể về Tùng, một người tập gym bị huấn luyện viên cá nhân (PT) ép tập luyện quá sức. Sau hai tuần với cường độ cao, Tùng cảm thấy cơ thể kiệt sức và phải dừng tập do chấn thương và các triệu chứng suy nhược. Ngoài Tùng, một trường hợp khác là Thúy Mai cũng gặp tình trạng tương tự khi bị ép tập với cường độ cao dẫn đến chấn thương. Các bác sĩ khuyến cáo rằng việc tập luyện cần có sự cân bằng và không nên ép cơ thể làm việc quá mức, nhằm tránh chấn thương và ảnh hưởng đến sức khỏe.",
+    "link": "https://vnexpress.net/bi-pt-ep-tap-gym-qua-suc-4862236.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao Tùng phải dừng tập gym?",
     "answers": [
       {
-        "text": "Anh không thích nổi tiếng và tự nhận mình lạnh lùng.",
+        "text": "Vì bị ép tập quá sức dẫn đến kiệt sức và chấn thương.",
         "correct": true
       },
       {
-        "text": "Anh mong muốn trở thành một ngôi sao giải trí.",
+        "text": "Vì không thích tập gym nữa.",
         "correct": false
       },
       {
-        "text": "Anh muốn tham gia nhiều phim truyền hình.",
+        "text": "Vì không có thời gian tập.",
         "correct": false
       },
       {
-        "text": "Anh không quan tâm đến sự nổi tiếng trong ngành giải trí.",
+        "text": "Vì không có huấn luyện viên cá nhân.",
         "correct": false
       }
     ]
@@ -1684,32 +1742,28 @@
     ]
   },
   {
-    "title": "Diên mạo ga T3 Tân Sơn Nhất trước thời điểm hoạt động",
-    "content": "Ga T3 Tân Sơn Nhất đang trong giai đoạn hoàn thiện cuối cùng trước khi chính thức đi vào hoạt động vào ngày 30/4 tới. Với tổng đầu tư 11.000 tỷ đồng, nhà ga sẽ phục vụ 20 triệu hành khách mỗi năm, nâng tổng công suất của sân bay lên 50 triệu. Công trình gồm 4 tầng nổi và 1 tầng hầm, với nhiều hạng mục đã hoàn thiện như mái lợp nhôm, kính và các hệ thống hạ tầng giao thông kết nối. Khi đưa vào hoạt động, ga T3 sẽ chịu trách nhiệm cho khoảng 80% lượng khách nội địa, giảm tải cho ga T1 đang quá tải.",
-    "link": "https://vnexpress.net/dien-mao-ga-t3-tan-son-nhat-truoc-thoi-diem-hoat-dong-4862970.html",
-    "cat": "thoi-su",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Khi nào ga T3 Tân Sơn Nhất sẽ chính thức hoạt động?",
+    "title": "NSƯT Bùi Như Lai \"Cha tôi, người ở lại\": Nhận mình lạnh lùng, sợ… nổi tiếng",
+    "content": "NSƯT Bùi Như Lai chia sẻ về cuộc sống và vai diễn trong bộ phim \"Cha tôi, người ở lại\", một tác phẩm Việt hóa từ phim Trung Quốc. Anh tự nhận mình là người lạnh lùng, không thích nổi tiếng và thường dành thời gian cho công việc quản lý tại Trường Đại học Sân khấu - Điện ảnh Hà Nội. Bùi Như Lai cũng nhấn mạnh tầm quan trọng của việc giữ gìn sự gần gũi với khán giả thông qua các vai diễn, mặc dù không muốn trở thành một ngôi sao giải trí. Anh đang hài lòng với cuộc sống bình dị cùng gia đình và công việc nghệ thuật.",
+    "link": "https://dantri.com.vn/giai-tri/nsut-bui-nhu-lai-cha-toi-nguoi-o-lai-nhan-minh-lanh-lung-so-noi-tieng-20250317220936197.htm",
+    "cat": "giai-tri",
+    "positivity": 7,
+    "importance": 6,
+    "question": "NSƯT Bùi Như Lai có những suy nghĩ gì về việc nổi tiếng?",
     "answers": [
       {
-        "text": "30/4/2025",
+        "text": "Anh không thích nổi tiếng và tự nhận mình lạnh lùng.",
         "correct": true
       },
       {
-        "text": "1/5/2025",
+        "text": "Anh mong muốn trở thành một ngôi sao giải trí.",
         "correct": false
       },
       {
-        "text": "15/5/2025",
+        "text": "Anh muốn tham gia nhiều phim truyền hình.",
         "correct": false
       },
       {
-        "text": "1/6/2025",
-        "correct": false
-      },
-      {
-        "text": "30/3/2025",
+        "text": "Anh không quan tâm đến sự nổi tiếng trong ngành giải trí.",
         "correct": false
       }
     ]
@@ -1742,28 +1796,32 @@
     ]
   },
   {
-    "title": "Bị PT ép tập gym quá sức",
-    "content": "Bài viết kể về Tùng, một người tập gym bị huấn luyện viên cá nhân (PT) ép tập luyện quá sức. Sau hai tuần với cường độ cao, Tùng cảm thấy cơ thể kiệt sức và phải dừng tập do chấn thương và các triệu chứng suy nhược. Ngoài Tùng, một trường hợp khác là Thúy Mai cũng gặp tình trạng tương tự khi bị ép tập với cường độ cao dẫn đến chấn thương. Các bác sĩ khuyến cáo rằng việc tập luyện cần có sự cân bằng và không nên ép cơ thể làm việc quá mức, nhằm tránh chấn thương và ảnh hưởng đến sức khỏe.",
-    "link": "https://vnexpress.net/bi-pt-ep-tap-gym-qua-suc-4862236.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
+    "title": "Diên mạo ga T3 Tân Sơn Nhất trước thời điểm hoạt động",
+    "content": "Ga T3 Tân Sơn Nhất đang trong giai đoạn hoàn thiện cuối cùng trước khi chính thức đi vào hoạt động vào ngày 30/4 tới. Với tổng đầu tư 11.000 tỷ đồng, nhà ga sẽ phục vụ 20 triệu hành khách mỗi năm, nâng tổng công suất của sân bay lên 50 triệu. Công trình gồm 4 tầng nổi và 1 tầng hầm, với nhiều hạng mục đã hoàn thiện như mái lợp nhôm, kính và các hệ thống hạ tầng giao thông kết nối. Khi đưa vào hoạt động, ga T3 sẽ chịu trách nhiệm cho khoảng 80% lượng khách nội địa, giảm tải cho ga T1 đang quá tải.",
+    "link": "https://vnexpress.net/dien-mao-ga-t3-tan-son-nhat-truoc-thoi-diem-hoat-dong-4862970.html",
+    "cat": "thoi-su",
+    "positivity": 9,
     "importance": 8,
-    "question": "Tại sao Tùng phải dừng tập gym?",
+    "question": "Khi nào ga T3 Tân Sơn Nhất sẽ chính thức hoạt động?",
     "answers": [
       {
-        "text": "Vì bị ép tập quá sức dẫn đến kiệt sức và chấn thương.",
+        "text": "30/4/2025",
         "correct": true
       },
       {
-        "text": "Vì không thích tập gym nữa.",
+        "text": "1/5/2025",
         "correct": false
       },
       {
-        "text": "Vì không có thời gian tập.",
+        "text": "15/5/2025",
         "correct": false
       },
       {
-        "text": "Vì không có huấn luyện viên cá nhân.",
+        "text": "1/6/2025",
+        "correct": false
+      },
+      {
+        "text": "30/3/2025",
         "correct": false
       }
     ]
