--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -228,6 +228,33 @@
     ]
   },
   {
+    "title": "Hai cán bộ cấp 76.000 giấy phép lái xe giả",
+    "content": "Hai cán bộ ở Mumbai, Ấn Độ đã bị đình chỉ công tác vì cấp phát 76.000 giấy phép lái xe giả dựa trên các bài kiểm tra lái xe mạo danh. Vụ việc được phát hiện thông qua cuộc kiểm toán cho thấy gần 75% giấy phép lái xe trong năm tài chính 2023-2024 được cấp dựa trên các bài kiểm tra không hợp lệ. Cuộc điều tra hiện đang tiếp tục để làm rõ liệu có sự hối lộ hay ưu đãi nào liên quan đến hành vi gian lận này.",
+    "link": "https://vnexpress.net/hai-can-bo-cap-76-000-giay-phep-lai-xe-gia-4863115.html",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 9,
+    "question": "Hai cán bộ nào ở Mumbai bị đình chỉ do cấp giấy phép lái xe giả?",
+    "answers": [
+      {
+        "text": "Raosaheb Ragde và Umesh Devre",
+        "correct": true
+      },
+      {
+        "text": "John Doe và Jane Smith",
+        "correct": false
+      },
+      {
+        "text": "Ajay Kumar và Ravi Patel",
+        "correct": false
+      },
+      {
+        "text": "Suresh Sharma và Vikram Singh",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bộ Quốc phòng lần đầu tuyển sinh chuyên ngành thiết bị bay không người lái",
     "content": "Bộ Quốc phòng Việt Nam đã chính thức tuyển sinh chuyên ngành thiết bị bay không người lái (UAV) tại Trường Sĩ quan Không quân với 25 chỉ tiêu dành riêng cho nam sinh viên. Đây là năm đầu tiên trường được giao nhiệm vụ này, với tổng chỉ tiêu tuyển sinh là 165. Học viên sẽ được đào tạo trong 4 năm và sau khi tốt nghiệp sẽ làm việc tại các trung tâm về UAV trong lực lượng không quân.",
     "link": "https://dantri.com.vn/giao-duc/bo-quoc-phong-lan-dau-tuyen-sinh-chuyen-nganh-thiet-bi-bay-khong-nguoi-lai-20250319104323804.htm",
@@ -1356,33 +1383,6 @@
     ]
   },
   {
-    "title": "Phấn hoa - nỗi ám ảnh của người Việt ở nước ngoài",
-    "content": "Bài viết đề cập đến nỗi ám ảnh của người Việt Nam sống ở nước ngoài, đặc biệt là tại Nhật Bản, do dị ứng phấn hoa. Nhiều người như Văn Phong và Hồng Hạnh phải bỏ công việc tốt để trở về quê hương vì không thể chịu đựng được triệu chứng dị ứng nặng nề trong mùa xuân. Dị ứng phấn hoa ảnh hưởng nghiêm trọng đến sức khỏe và chất lượng cuộc sống của họ, với tỷ lệ người mắc bệnh ngày càng gia tăng.",
-    "link": "https://vnexpress.net/phan-hoa-noi-am-anh-cua-nguoi-viet-o-nuoc-ngoai-4861536.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Dị ứng phấn hoa ảnh hưởng đến người Việt ở nước ngoài như thế nào?",
-    "answers": [
-      {
-        "text": "Nó khiến họ phải bỏ việc và trở về nước.",
-        "correct": true
-      },
-      {
-        "text": "Nó không ảnh hưởng nhiều đến công việc.",
-        "correct": false
-      },
-      {
-        "text": "Người mắc dị ứng phấn hoa luôn khỏe mạnh.",
-        "correct": false
-      },
-      {
-        "text": "Mọi người đều thích mùa xuân và không lo lắng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "NSƯT Bùi Như Lai \"Cha tôi, người ở lại\": Nhận mình lạnh lùng, sợ… nổi tiếng",
     "content": "NSƯT Bùi Như Lai chia sẻ về cuộc sống và vai diễn trong bộ phim \"Cha tôi, người ở lại\", một tác phẩm Việt hóa từ phim Trung Quốc. Anh tự nhận mình là người lạnh lùng, không thích nổi tiếng và thường dành thời gian cho công việc quản lý tại Trường Đại học Sân khấu - Điện ảnh Hà Nội. Bùi Như Lai cũng nhấn mạnh tầm quan trọng của việc giữ gìn sự gần gũi với khán giả thông qua các vai diễn, mặc dù không muốn trở thành một ngôi sao giải trí. Anh đang hài lòng với cuộc sống bình dị cùng gia đình và công việc nghệ thuật.",
     "link": "https://dantri.com.vn/giai-tri/nsut-bui-nhu-lai-cha-toi-nguoi-o-lai-nhan-minh-lanh-lung-so-noi-tieng-20250317220936197.htm",
@@ -1468,32 +1468,28 @@
     ]
   },
   {
-    "title": "Phụ huynh bị đưa ra xét xử vì ép con \"thú tội\" giữa trời 7 độ C",
-    "content": "Một cặp phụ huynh ở Indiana, Mỹ, đang bị truy tố vì đã ép con gái 6 tuổi đứng ngoài trời lạnh 7 độ C trong nhiều giờ cầm tấm biển \"thú tội\". Họ cho rằng hình phạt này là cần thiết để dạy dỗ con gái, nhưng hành động này đã gây ra sự phẫn nộ trong cộng đồng. Cha của bé gái, một cảnh sát, vẫn khăng khăng cho rằng hình phạt này là cách duy nhất để giáo dục con. Cảnh sát đã vào cuộc sau khi có báo cáo từ những người qua đường chứng kiến sự việc.",
-    "link": "https://dantri.com.vn/giao-duc/phu-huynh-bi-dua-ra-xet-xu-vi-ep-con-thu-toi-giua-troi-7-do-c-20250318124813740.htm",
-    "cat": "phap-luat",
-    "positivity": 1,
-    "importance": 8,
-    "question": "Tại sao phụ huynh ở Indiana bị truy tố?",
+    "title": "Phấn hoa - nỗi ám ảnh của người Việt ở nước ngoài",
+    "content": "Bài viết đề cập đến nỗi ám ảnh của người Việt Nam sống ở nước ngoài, đặc biệt là tại Nhật Bản, do dị ứng phấn hoa. Nhiều người như Văn Phong và Hồng Hạnh phải bỏ công việc tốt để trở về quê hương vì không thể chịu đựng được triệu chứng dị ứng nặng nề trong mùa xuân. Dị ứng phấn hoa ảnh hưởng nghiêm trọng đến sức khỏe và chất lượng cuộc sống của họ, với tỷ lệ người mắc bệnh ngày càng gia tăng.",
+    "link": "https://vnexpress.net/phan-hoa-noi-am-anh-cua-nguoi-viet-o-nuoc-ngoai-4861536.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Dị ứng phấn hoa ảnh hưởng đến người Việt ở nước ngoài như thế nào?",
     "answers": [
       {
-        "text": "Vì ép con đứng ngoài trời lạnh cầm biển \"thú tội\"",
+        "text": "Nó khiến họ phải bỏ việc và trở về nước.",
         "correct": true
       },
       {
-        "text": "Vì không cho con đi học",
+        "text": "Nó không ảnh hưởng nhiều đến công việc.",
         "correct": false
       },
       {
-        "text": "Vì không chăm sóc con đúng cách",
+        "text": "Người mắc dị ứng phấn hoa luôn khỏe mạnh.",
         "correct": false
       },
       {
-        "text": "Vì thường xuyên la mắng con",
-        "correct": false
-      },
-      {
-        "text": "Vì không cho con ăn uống đầy đủ",
+        "text": "Mọi người đều thích mùa xuân và không lo lắng.",
         "correct": false
       }
     ]
@@ -1521,6 +1517,37 @@
       },
       {
         "text": "Vì không có huấn luyện viên cá nhân.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Phụ huynh bị đưa ra xét xử vì ép con \"thú tội\" giữa trời 7 độ C",
+    "content": "Một cặp phụ huynh ở Indiana, Mỹ, đang bị truy tố vì đã ép con gái 6 tuổi đứng ngoài trời lạnh 7 độ C trong nhiều giờ cầm tấm biển \"thú tội\". Họ cho rằng hình phạt này là cần thiết để dạy dỗ con gái, nhưng hành động này đã gây ra sự phẫn nộ trong cộng đồng. Cha của bé gái, một cảnh sát, vẫn khăng khăng cho rằng hình phạt này là cách duy nhất để giáo dục con. Cảnh sát đã vào cuộc sau khi có báo cáo từ những người qua đường chứng kiến sự việc.",
+    "link": "https://dantri.com.vn/giao-duc/phu-huynh-bi-dua-ra-xet-xu-vi-ep-con-thu-toi-giua-troi-7-do-c-20250318124813740.htm",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 8,
+    "question": "Tại sao phụ huynh ở Indiana bị truy tố?",
+    "answers": [
+      {
+        "text": "Vì ép con đứng ngoài trời lạnh cầm biển \"thú tội\"",
+        "correct": true
+      },
+      {
+        "text": "Vì không cho con đi học",
+        "correct": false
+      },
+      {
+        "text": "Vì không chăm sóc con đúng cách",
+        "correct": false
+      },
+      {
+        "text": "Vì thường xuyên la mắng con",
+        "correct": false
+      },
+      {
+        "text": "Vì không cho con ăn uống đầy đủ",
         "correct": false
       }
     ]
@@ -2546,6 +2573,37 @@
     ]
   },
   {
+    "title": "6 dưỡng chất cần thiết để duy trì sức khỏe",
+    "content": "Bài viết trình bày về 6 dưỡng chất cần thiết để duy trì sức khỏe, bao gồm vitamin C, D, E, kẽm và các chất chống oxy hóa. Những dưỡng chất này đóng vai trò quan trọng trong việc tăng cường hệ miễn dịch, bảo vệ cơ thể khỏi các tác nhân gây bệnh, đặc biệt trong thời tiết thay đổi. Ngoài việc đảm bảo chế độ ăn uống đầy đủ các dưỡng chất này, lối sống lành mạnh với tập thể dục, kiểm soát căng thẳng và ngủ đủ giấc cũng rất cần thiết để duy trì sức khỏe.",
+    "link": "https://vnexpress.net/6-duong-chat-can-thiet-de-duy-tri-suc-khoe-4862638.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Những dưỡng chất nào cần thiết để duy trì sức khỏe?",
+    "answers": [
+      {
+        "text": "Vitamin C, D, E, kẽm và chất chống oxy hóa",
+        "correct": true
+      },
+      {
+        "text": "Chất béo bão hòa",
+        "correct": false
+      },
+      {
+        "text": "Carbohydrate đơn giản",
+        "correct": false
+      },
+      {
+        "text": "Chất xơ hòa tan",
+        "correct": false
+      },
+      {
+        "text": "Protein động vật",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "4 điều cần biết về cơn ho",
     "content": "Cơn ho là phản xạ tự nhiên giúp làm sạch đường hô hấp, thường kéo dài không quá hai tuần. Nếu ho dai dẳng hơn ba tuần, có thể do bệnh lý nghiêm trọng như nhiễm trùng, trào ngược dạ dày thực quản hoặc hen suyễn. Để phòng ngừa và giảm ho, việc uống đủ nước, thay đổi chế độ ăn uống và bỏ thuốc lá là rất quan trọng. Ngoài ra, rửa tay thường xuyên và tránh tiếp xúc với người bệnh cũng giúp giảm nguy cơ mắc bệnh.",
     "link": "https://vnexpress.net/4-dieu-can-biet-ve-con-ho-4862670.html",
@@ -2595,37 +2653,6 @@
       },
       {
         "text": "Tổ chức giải thưởng cho các môn thể thao khác",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "6 dưỡng chất cần thiết để duy trì sức khỏe",
-    "content": "Bài viết trình bày về 6 dưỡng chất cần thiết để duy trì sức khỏe, bao gồm vitamin C, D, E, kẽm và các chất chống oxy hóa. Những dưỡng chất này đóng vai trò quan trọng trong việc tăng cường hệ miễn dịch, bảo vệ cơ thể khỏi các tác nhân gây bệnh, đặc biệt trong thời tiết thay đổi. Ngoài việc đảm bảo chế độ ăn uống đầy đủ các dưỡng chất này, lối sống lành mạnh với tập thể dục, kiểm soát căng thẳng và ngủ đủ giấc cũng rất cần thiết để duy trì sức khỏe.",
-    "link": "https://vnexpress.net/6-duong-chat-can-thiet-de-duy-tri-suc-khoe-4862638.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Những dưỡng chất nào cần thiết để duy trì sức khỏe?",
-    "answers": [
-      {
-        "text": "Vitamin C, D, E, kẽm và chất chống oxy hóa",
-        "correct": true
-      },
-      {
-        "text": "Chất béo bão hòa",
-        "correct": false
-      },
-      {
-        "text": "Carbohydrate đơn giản",
-        "correct": false
-      },
-      {
-        "text": "Chất xơ hòa tan",
-        "correct": false
-      },
-      {
-        "text": "Protein động vật",
         "correct": false
       }
     ]
@@ -3957,33 +3984,6 @@
     ]
   },
   {
-    "title": "Điều trị u gan trên nền xơ gan thế nào?",
-    "content": "Bài viết đề cập đến việc điều trị u gan ở người bệnh xơ gan, cụ thể là trường hợp người bệnh phát hiện nhiều khối u gan và viêm gan virus B. Phương pháp điều trị sẽ phụ thuộc vào kích thước và vị trí của khối u, có thể bao gồm nút mạch hoặc phẫu thuật. Đối với khối u nhỏ, có thể sử dụng đốt sóng cao tần hoặc tiêm cồn. Tuy nhiên, đối với người mắc viêm gan virus B, cần thận trọng vì có thể gây ra suy gan nhanh chóng.",
-    "link": "https://vnexpress.net/dieu-tri-u-gan-tren-nen-xo-gan-the-nao-4862660.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Làm thế nào để điều trị u gan trên nền xơ gan?",
-    "answers": [
-      {
-        "text": "Có thể điều trị bằng phương pháp nút mạch",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có thể phẫu thuật",
-        "correct": false
-      },
-      {
-        "text": "Không có phương pháp điều trị nào",
-        "correct": false
-      },
-      {
-        "text": "Dùng thuốc truyền thống để chữa trị",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bị ung thư đại tràng có nên kiêng rau củ?",
     "content": "Bài viết đề cập đến việc người bệnh ung thư đại tràng có nên kiêng rau củ hay không. Theo các chuyên gia, người bệnh nên có chế độ ăn uống cân bằng và đa dạng, bao gồm cả rau củ để cung cấp vitamin và khoáng chất cần thiết. Tuy nhiên, trong một số trường hợp như tắc ruột hoặc tiêu chảy kéo dài, cần hạn chế thực phẩm chứa chất xơ và ưu tiên rau củ mềm, nấu chín kỹ để dễ tiêu hóa. Bác sĩ dinh dưỡng cũng có thể tư vấn chế độ ăn phù hợp theo tình trạng cụ thể của từng bệnh nhân.",
     "link": "https://vnexpress.net/bi-ung-thu-dai-trang-co-nen-kieng-rau-cu-4862655.html",
@@ -4006,6 +4006,33 @@
       },
       {
         "text": "Có thể ăn rau củ nhưng chỉ nên ăn sống.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Điều trị u gan trên nền xơ gan thế nào?",
+    "content": "Bài viết đề cập đến việc điều trị u gan ở người bệnh xơ gan, cụ thể là trường hợp người bệnh phát hiện nhiều khối u gan và viêm gan virus B. Phương pháp điều trị sẽ phụ thuộc vào kích thước và vị trí của khối u, có thể bao gồm nút mạch hoặc phẫu thuật. Đối với khối u nhỏ, có thể sử dụng đốt sóng cao tần hoặc tiêm cồn. Tuy nhiên, đối với người mắc viêm gan virus B, cần thận trọng vì có thể gây ra suy gan nhanh chóng.",
+    "link": "https://vnexpress.net/dieu-tri-u-gan-tren-nen-xo-gan-the-nao-4862660.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Làm thế nào để điều trị u gan trên nền xơ gan?",
+    "answers": [
+      {
+        "text": "Có thể điều trị bằng phương pháp nút mạch",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có thể phẫu thuật",
+        "correct": false
+      },
+      {
+        "text": "Không có phương pháp điều trị nào",
+        "correct": false
+      },
+      {
+        "text": "Dùng thuốc truyền thống để chữa trị",
         "correct": false
       }
     ]
@@ -4289,37 +4316,6 @@
     ]
   },
   {
-    "title": "Nhiều mảnh đạn hơn 50 năm nằm trong mặt người đàn ông",
-    "content": "Ông Hưng, 71 tuổi, đã sống với nhiều mảnh đạn trong mặt hơn 50 năm mà không biết. Gần đây, ông trải qua tình trạng đau sưng mắt, chảy dịch và được chẩn đoán bị viêm đa xoang cùng với sự hiện diện của nhiều dị vật trong vùng má. Sau khi chụp CT, bác sĩ đã chỉ định phẫu thuật để loại bỏ các dị vật này và điều trị tình trạng viêm nhiễm. Ca phẫu thuật diễn ra thành công và ông đã xuất viện sau hai ngày chăm sóc.",
-    "link": "https://vnexpress.net/nhieu-manh-dan-hon-50-nam-nam-trong-mat-nguoi-dan-ong-4862403.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Ông Hưng đã sống với mảnh đạn trong mặt bao lâu?",
-    "answers": [
-      {
-        "text": "Hơn 50 năm",
-        "correct": true
-      },
-      {
-        "text": "Hơn 30 năm",
-        "correct": false
-      },
-      {
-        "text": "Hơn 40 năm",
-        "correct": false
-      },
-      {
-        "text": "Hơn 20 năm",
-        "correct": false
-      },
-      {
-        "text": "Hơn 10 năm",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Yamaha FZ-S Fi Hybrid giá từ 1.700 USD",
     "content": "Yamaha vừa giới thiệu mẫu xe FZ-S Fi Hybrid tại Ấn Độ với giá khởi điểm từ 1.700 USD. Xe được trang bị hệ thống mild-hybrid giúp hỗ trợ khởi động và tăng tốc, đồng thời giảm mức tiêu thụ nhiên liệu. FZ-S Fi Hybrid sử dụng động cơ 150 phân khối, công suất 12,4 mã lực và có một số cải tiến về thiết kế công thái học, cùng với màn hình TFT 4,2 inch hỗ trợ kết nối bluetooth.",
     "link": "https://vnexpress.net/yamaha-fz-s-fi-hybrid-gia-tu-1-700-usd-4862632.html",
@@ -4346,6 +4342,37 @@
       },
       {
         "text": "1.900 USD",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nhiều mảnh đạn hơn 50 năm nằm trong mặt người đàn ông",
+    "content": "Ông Hưng, 71 tuổi, đã sống với nhiều mảnh đạn trong mặt hơn 50 năm mà không biết. Gần đây, ông trải qua tình trạng đau sưng mắt, chảy dịch và được chẩn đoán bị viêm đa xoang cùng với sự hiện diện của nhiều dị vật trong vùng má. Sau khi chụp CT, bác sĩ đã chỉ định phẫu thuật để loại bỏ các dị vật này và điều trị tình trạng viêm nhiễm. Ca phẫu thuật diễn ra thành công và ông đã xuất viện sau hai ngày chăm sóc.",
+    "link": "https://vnexpress.net/nhieu-manh-dan-hon-50-nam-nam-trong-mat-nguoi-dan-ong-4862403.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Ông Hưng đã sống với mảnh đạn trong mặt bao lâu?",
+    "answers": [
+      {
+        "text": "Hơn 50 năm",
+        "correct": true
+      },
+      {
+        "text": "Hơn 30 năm",
+        "correct": false
+      },
+      {
+        "text": "Hơn 40 năm",
+        "correct": false
+      },
+      {
+        "text": "Hơn 20 năm",
+        "correct": false
+      },
+      {
+        "text": "Hơn 10 năm",
         "correct": false
       }
     ]
@@ -4582,33 +4609,6 @@
       },
       {
         "text": "Vì công ty không được phép hoạt động.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "VnExpress Marathon hợp tác cùng thương hiệu thể thao Velosar",
-    "content": "VnExpress Marathon đã ký hợp tác chiến lược với thương hiệu thể thao Velosar nhằm cung cấp trang phục thi đấu chất lượng cao cho vận động viên. Theo thỏa thuận, Velosar sẽ cung cấp trang phục cho các VĐV, pacer, crew và tình nguyện viên trong các giải đấu thuộc hệ thống VM. Hợp tác này không chỉ nâng cao chất lượng vật phẩm thi đấu mà còn góp phần xây dựng hệ sinh thái chạy bộ chuyên nghiệp tại Việt Nam.",
-    "link": "https://vnexpress.net/vnexpress-marathon-hop-tac-cung-thuong-hieu-the-thao-velosar-4861305.html",
-    "cat": "the-thao",
-    "positivity": 9,
-    "importance": 8,
-    "question": "VnExpress Marathon và Velosar hợp tác để làm gì?",
-    "answers": [
-      {
-        "text": "Cung cấp trang phục thi đấu chất lượng cao",
-        "correct": true
-      },
-      {
-        "text": "Tổ chức giải đấu mới",
-        "correct": false
-      },
-      {
-        "text": "Mở rộng thị trường thể thao",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường truyền thông cho sự kiện",
         "correct": false
       }
     ]
